Fix spring security